# Win7-APP

./: CMakeLists.txt  README.md  desktop_main.cpp
.github/workflows/: cmake.yml
